k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-grocery
  labels:
    name: smart-grocery
    environment: production
